chandeliers-lus/tests/compile_fail/ui/tc/all-tup.stderr
error: Type mismatch between the left and right sides: Base types should be unifiable: expected bool, got int
 --> tests/compile_fail/ui/tc/all-tup.rs:5:9
  |
5 |     let (a, b, c) = (x, y, z); tel
  |         ^^^^^^^^^^^^^^^^^^^^^
  |
note: This element has type bool
 --> tests/compile_fail/ui/tc/all-tup.rs:5:10
  |
5 |     let (a, b, c) = (x, y, z); tel
  |          ^
note: While this element has type int
 --> tests/compile_fail/ui/tc/all-tup.rs:5:22
  |
5 |     let (a, b, c) = (x, y, z); tel
  |                      ^

error: Type mismatch between the left and right sides: Base types should be unifiable: expected bool, got int
 --> tests/compile_fail/ui/tc/all-tup.rs:5:9
  |
5 |     let (a, b, c) = (x, y, z); tel
  |         ^^^^^^^^^^^^^^^^^^^^^
  |
note: This element has type bool
 --> tests/compile_fail/ui/tc/all-tup.rs:5:13
  |
5 |     let (a, b, c) = (x, y, z); tel
  |             ^
note: While this element has type int
 --> tests/compile_fail/ui/tc/all-tup.rs:5:25
  |
5 |     let (a, b, c) = (x, y, z); tel
  |                         ^

error: Type mismatch between the left and right sides: Base types should be unifiable: expected bool, got int
 --> tests/compile_fail/ui/tc/all-tup.rs:5:9
  |
5 |     let (a, b, c) = (x, y, z); tel
  |         ^^^^^^^^^^^^^^^^^^^^^
  |
note: This element has type bool
 --> tests/compile_fail/ui/tc/all-tup.rs:5:16
  |
5 |     let (a, b, c) = (x, y, z); tel
  |                ^
note: While this element has type int
 --> tests/compile_fail/ui/tc/all-tup.rs:5:28
  |
5 |     let (a, b, c) = (x, y, z); tel
  |                            ^
